# bootcamp

./: .gitignore  daily-log.md  pyproject.toml  pyvenv.cfg
Dataflow-framework/abstraction-level-0/: README.md  process.py
Dataflow-framework/abstraction-level-1/: README.md  process.py  result.txt
Dataflow-framework/abstraction-level-2/: README.md  cli.py  core.py  input.txt  output.txt  pipeline.py  processor_types.py
Dataflow-framework/abstraction-level-3/: README.md  cli.py  core.py  input.txt  main.py  output.txt  pipeline.py  pipeline.yaml
Dataflow-framework/abstraction-level-4/: README.md  cli.py  input.txt  main.py  output.txt  pipeline.py  pipeline.yaml  requirements.txt
Dataflow-framework/abstraction-level-5/: README.md  archived_errors.txt  cli.py  config.yaml  input.txt  main.py  output.txt  pipeline.py  requirements.txt
Dataflow-framework/abstraction-level-6/: README.md  cli.py  config.yaml  input.txt  main.py  requirements.txt  state_machine.py
Dataflow-framework/abstraction-level-7/: README.md  requirements.txt  run.py
Dataflow-framework/abstraction-level-8/: Dockerfile  (+8 more)
Figure-caption-extraction/: DESIGN.md  Dockerfile  Makefile  README.md  TESTING_PLAN.md  batch_ingest.py  create_tables.py  docker-compose.yml  ingest_run.py  pmc_ids.csv  pmc_ids.txt  requirements.txt
PycharmProjects/Day2/Section7/: ex_1_6.py  ex_1_7.py  ex_2_1.py  ex_2_4.py  ex_2_6.py  ex_2_7.py  ex_3_1.py  ex_3_2.py  ex_3_3.py  ex_3_5.py  ex_3_8.py  ex_4_1.py  ex_4_3.py  ex_4_5.py  ex_4_7.py  pyproject.toml
PycharmProjects/Day2/Section7/mypkg.egg-info/: PKG-INFO
basics/: day0-setup.cast
basics/ex-basics-3/: README.md  pyproject.toml
day0/ex-basics-2/: README.md  main.py  pyproject.toml
day_0/: index.html
doctools/: mkdocs.yml
sejal-hello/: main.py  pyproject.toml
sejal_hello/: README.md  main.py
(+401 files in other folders)
