[project]
name = "sejal-hello"
version = "0.1.0"
description = "A simple hello world package"
authors = [
  { name="Sejal Desai", email="sejaldesai2001@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/sejal1234desai/sejal-hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
