[project]
name = "sejal-hello"
version = "0.1.0"
description = "A hello world CLI package by Sejal"
authors = [
  { name="Sejal Desai", email="sejaldesai2001@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["typer","rich>=12.0.0"]


[project.scripts]
sejal-hello = "sejal_hello.main:say_hello"
