
[project]
name = "mypkg"
version = "0.1.0"
description = "My sample CLI tool"
authors = [{name = "Sejal Desai", email = "sejal@example.com"}]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
mytool = "mypkg.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
